# OmniDock-Onboarding

./: README.md
onboarding/: README.MD  pyproject.toml
onboarding/bol/: apps.py
onboarding/omnidock/: __init__.py  apps.py  models.py  serializers.py  views.py
onboarding/omnidock/migrations/: 0001_initial.py
onboarding/onboarding/: settings.py  urls.py
onboarding/otto/: admin.py  api.py  models.py  serializers.py  tasks.py  views.py
onboarding/otto/commands/: fetch_orders.py
onboarding/otto/management/commands/: fetch_otto_data.py
onboarding/otto/migrations/: 0001_initial.py  0002_alter_address_addition_alter_address_country_code_and_more.py
